--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,36 @@
     about martial arts which he comibines with his ability to help the needy. 
     I might also have similar power of being lucky but not all the time. </h4>
     <br>
-    <img src="luck.jpg">
+    <img src="luck.jpg" alt="Picture of lucky man">
+    <hr>
+    <table>
+        <tr>
+            <th>Food item</th>
+            <th>Place</th>
+            <th>Price</th>
+        </tr>
+        <tr>
+            <td>Burger</td>
+            <td>Burger king</td>
+            <td>$13</td>
+        </tr>
+        <tr>
+            <td>Pizza</td>
+            <td>Pizza hut</td>
+            <td>$20</td>
+        </tr>
+        <tr>
+            <td>Fried rice</td>
+            <td>Joywok</td>
+            <td>$7</td>
+        </tr>
+        <tr>
+            <td>Milkshake</td>
+            <td>Sonic</td>
+            <td>$10</td>
+        </tr>
+    </table>
+    
+
 
 </body>
