--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  <li>to your left you can see the lake</li>
         <li>That is the spot</li>
 
-        <a href="file:///C:/Users/S545401/Dropbox/PC/Documents/GitHub/webapps-f21-assignment-3-AbdulRehmanSayeed/aboutme.html">Super-hero</a>
+        <a href="aboutme.html">Super-hero</a>
 
      
     
