--- a/aboutme.html
+++ b/aboutme.html
@@ -16,6 +16,7 @@
     <img src="luck.jpg" alt="Picture of lucky man">
     <hr>
     <h2>Favorite food</h2>
+    Here are some of my Favorite food item which i enjoy during my stay at maryville
     <table>
         <tr>
             <th>Food item</th>
