--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head> 
         <title>Assginment-3 HTML </title></head>
             <body> 
+             <a href="bonus.html">Bonus<a>
                  <h1>
                     Abdul Rehman Sayeed,Mohammed
                  </h1>
